# durable-acp-rs

./: .gitignore  Cargo.toml  README.md  SDD-multi-agent-messaging.md  agents.toml  package.json  project_architecture_handoff.md
docs/: HANDOFF.md  api-architecture-sdd.md  architecture.md  auth-sdd.md  deployment-sdd.md  electric-sync-sdd.md  event-subscribers-sdd.md  flamecast-capabilities.md  flamecast-gap-closure-sdd.md  flamecast-import.md  flamecast-integration-sdd.md  flamecast-runtime-boundary-sdd.md  flamecast-runtime-swap-sdd.md  hosted-conductor-architecture-sdd.md  index.md  known-limitations-sdd.md  multi-agent-conductor-sdd.md  proxy-decomposition-sdd.md  schema-compatibility.md  sdk-alignment.md  spike-1-hosted-conductor-baseline-sdd.md  spike-2-session-first-remote-demo-sdd.md  spike-3-flamecast-control-plane-sdd.md  spike-3-handoff.md  transport-bridge-conductor-state-sdd.md  transport-sdd.md  workstreams.md
docs/archive/: architecture-redesign.md
docs/conductor-redesign/: README.md  architecture.md  implementation.md  queue-scope.md  testing-and-hosting.md
scripts/: two-agents.sh
src/: acp_registry.rs  acp_server.rs  agent_router.rs  api.rs  app.rs  client.rs  conductor.rs  conductor_state.rs  durable_session.rs  durable_state_proxy.rs  durable_stream_tracer.rs  durable_streams.rs  lib.rs  main.rs  peer_mcp.rs  registry.rs  state.rs  stream_server.rs  stream_subscriber.rs  transport.rs  webhook.rs
tests/: basic.rs  client.rs  conductor.rs  e2e_full_stack.rs  integration.rs  state_stream.rs  stream_reconnect.rs  transport_process_e2e.rs  unit.rs  webhook_retry.rs  websocket_acp.rs
tests/common/: mod.rs
ts/: .gitignore  pnpm-lock.yaml  tsconfig.json
