[package]
name = "durable-acp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
durable-streams-server = "0.1.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
agent-client-protocol = "0.10.4"
async-trait = "0.1"
sacp = "11.0.0"
schemars = { version = "1.0", features = ["derive"] }
sacp-conductor = "11.0.0"
sacp-tokio = "11.0.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[[bin]]
name = "durable-acp-rs"
path = "src/main.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[[bin]]
name = "peer"
path = "src/bin/peer.rs"

[[bin]]
name = "run"
path = "src/bin/run.rs"

[[bin]]
name = "install"
path = "src/bin/install.rs"
