[package]
name = "durable-acp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
atty = "0.2"
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
iocraft = "0.8"
durable-streams-server = "0.1.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# All ACP crates from one repo, one commit — guaranteed compatible
# Using `package` aliases so existing `use sacp::*` imports work unchanged
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", features = ["unstable_session_usage"] }
async-trait = "0.1"
sacp = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-core" }
schemars = { version = "1.0", features = ["derive"] }
sacp-conductor = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-conductor" }
sacp-tokio = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-tokio" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
agent-client-protocol-test = { git = "https://github.com/agentclientprotocol/rust-sdk" }
yopo = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-yopo" }

[[bin]]
name = "durable-acp-rs"
path = "src/main.rs"

[[bin]]
name = "agents"
path = "src/bin/agents.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "durable-state-proxy"
path = "src/bin/durable-state-proxy.rs"

[[bin]]
name = "peer-mcp-proxy"
path = "src/bin/peer-mcp-proxy.rs"

[[bin]]
name = "testy"
path = "src/bin/testy.rs"

